---------------------------------------------------------------------------------------------------
Version: 1.10.0
Date:

  Features:
     - ---- Vanilla enemy enhancement ----
     - Added combat robots, construction robot, logistic robot as flyer units for enemy race.
     - construction robot handles building proxy spawners.
     - logistic robot handles the dropship role.
     - Vanilla race now support all features of ERM mod.
     - ---- End Vanilla enemy enhancement ----
     - ---- time base custom attack group ----
     - Add time base custom attack group. Default: ON
     - Points will add to attack meter every minute. Starting at level 2.
     - ---- End time base custom attack group ----
     - Added 4 races split in map generation setting. You can up to have 4 races on nauvis.

  Changes:
     - Biters now support movement speed multiplier.
     - Cap attack meter at 999999.
     - Remove small-biter/splitter and small-worm-turret from spawning in custom attack group.

  Bugfixes:
     - Fix a crash when custom attack group attempt to generate and there isn't an attack-able chunk.

---------------------------------------------------------------------------------------------------
Version: 1.9.2
Date: 2021-10-27

  Bugfixes:
    - Fixed an issue which custom attack group only spawn at first SE attackable planet.

---------------------------------------------------------------------------------------------------
Version: 1.9.1
Date: 2021-10-23

  Bugfixes:
    - Disable debug mode XD

---------------------------------------------------------------------------------------------------
Version: 1.9.0
Date: 2021-10-23

  Features:
    - Custom attack group can now spawn in Space Exploration planets!
    - Custom attack group is now out of beta.
    - Enemy running/flying speed can now adjustable in startup setting.
    - Added a detailed window to show race's additional information and adjustment