@@ -98,8 +98,8 @@ enemyracemanager-precision-strike-flying-unit-enable=Enable flying unit squad to
 enemyracemanager-precision-strike-flying-unit-chance=Chance of flying units squad to spawn with precision strike feature \n\nDefault: 25
 enemyracemanager-precision-strike-warning=Whether you get a notification on mini map when a precision strike group formed. \n\nDefault: ON
 
-enemyracemanager-time-based-enable=Enable time based custom attack group. \nDefault:ON
-enemyracemanager-time-based-points=Percent of the next attack threshold will added to attack meter pool every minute. \nExample: erm_zerg has 3000 points as next attack threshold. 150 points will be added to attack meter every minute until the next attack.  \n\nDefault: 5
+enemyracemanager-time-based-enable=Enable time based custom attack group. They hate you for being on their world. This starts when enemy is at level 2. \nDefault:ON
+enemyracemanager-time-based-points=Percent of the next attack threshold will added to attack meter pool every minute. \nExample: erm_zerg has 3000 points as next attack threshold. 150 points will be added to attack meter every minute until the next attack threshold change.  \n\nDefault: 5, This takes about 20 mins to fill an custom group attack if you are being passive.
 
 [damage-type-name]
 cold=Cold
