@@ -22,19 +22,19 @@ local max_hitpoint_multiplier = settings.startup["enemyracemanager-max-hitpoint-
 local resistance_mutiplier = settings.startup["enemyracemanager-level-multipliers"].value
 -- Handles acid and poison resistance
 local base_acid_resistance = 10
-local incremental_acid_resistance = 65
+local incremental_acid_resistance = 75
 -- Handles physical resistance
 local base_physical_resistance = 0
-local incremental_physical_resistance = 85
+local incremental_physical_resistance = 95
 -- Handles fire and explosive resistance
 local base_fire_resistance = 10
-local incremental_fire_resistance = 70
+local incremental_fire_resistance = 80
 -- Handles laser and electric resistance
 local base_electric_resistance = 0
-local incremental_electric_resistance = 80
+local incremental_electric_resistance = 90
 -- Handles cold resistance
 local base_cold_resistance = 10
-local incremental_cold_resistance = 65
+local incremental_cold_resistance = 75
 
 local damage_multiplier = settings.startup["enemyracemanager-level-multipliers"].value
 local physical_modifier = 1
